[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[project]
name = 'djok'
version = '0.2.0'
requires-python = '>=3.10'

description = 'Make Django some OK'
authors = [
    { name = 'Artem Vlasov', email = 'root@proscript.ru' },
]
maintainers = [
    { name = 'Artem Vlasov', email = 'root@proscript.ru' },
]
readme = 'README.md'

dependencies = [
    # ---
    # Django
    # ---
    'django>=4.2',
    # ---
    # Django batteries
    # ---
    'django-autocomplete-light',
    'django-downloadview',
    'sorl-thumbnail',
]

[project.urls]
Repository = 'https://github.com/Yuego/djok/'

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.format]
# Использовать одинарные кавычки вместо двойных
quote-style = "single"  # Доступные варианты: "single", "double"

# Также можно настроить кавычки для docstrings
docstring-code-format = true